@@ -611,11 +611,7 @@ int main(int argc, char *argv[])
 	mosquitto_lib_cleanup();
 
 	if(rc){
-		if(rc == MOSQ_ERR_ERRNO){
-			fprintf(stderr, "Error: %s\n", strerror(errno));
-		}else{
-			fprintf(stderr, "Error: %s\n", mosquitto_strerror(rc));
-		}
+		fprintf(stderr, "Error: %s\n", mosquitto_strerror(rc));
 	}
 	return rc;
 }
